[package]
name = "gitcycle"
version = "0.1.0"
edition = "2024"
authors = ["Jason Gilmore <wj@wjgilmore.com>"]
license = "MIT"
description = "Terminal UI for exploring the current git repository and its GitHub organization."
readme = "README.md"
repository = "https://github.com/wjgilmore/gitcycle"
homepage = "https://github.com/wjgilmore/gitcycle"
keywords = ["tui", "git", "github", "ratatui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.release]
# Tag releases as `vX.Y.Z` (matches the v0.1.0 tag already on master).
tag-name = "v{{version}}"
tag-message = "Release {{tag_name}}"
# Use a conventional-commits style for the release commit.
pre-release-commit-message = "chore(release): {{version}}"
# Don't publish from a dirty tree or off the wrong branch.
allow-branch = ["master"]
# Stamp the CHANGELOG: convert `## [Unreleased]` to `## [X.Y.Z] — YYYY-MM-DD`
# and refresh the link references at the bottom of the file.
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] — {{date}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "\\[Unreleased\\]: https://github.com/wjgilmore/gitcycle/compare/v[0-9.]+\\.\\.\\.HEAD", replace = "[Unreleased]: https://github.com/wjgilmore/gitcycle/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/wjgilmore/gitcycle/releases/tag/v{{version}}", exactly = 1 },
]
